--- a/b.html
+++ b/b.html
@@ -8,15 +8,15 @@
     <meta name="author" content="menu">
 	<title>煎饼售卖</title>
 	<!-- Bootstrap Core CSS -->
-    <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
-	<link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+	<!--<link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">-->
 
 
     <!-- Custom Fonts -->
-    <!--<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">-->
+    link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <!--<script type="text/javascript" src="./jquery-1.8.2.min.js"></script>-->
-	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="./jquery-1.8.2.min.js"></script>
+	<!--<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>-->
     <script type="text/javascript"> 
 		function initDatabase() {
             var db = getCurrentDb();//初始化数据库
