--- a/b.html
+++ b/b.html
@@ -13,7 +13,7 @@
 
 
     <!-- Custom Fonts -->
-    link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <script type="text/javascript" src="./jquery-1.8.2.min.js"></script>
 	<!--<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>-->
