--- a/b.html
+++ b/b.html
@@ -52,6 +52,7 @@
 			
 			//清空数据库
 			$('#clear').click(function(){  
+			alert(123456);
                 var db = getCurrentDb();
 				var dataSale =[];
 				db.transaction(function (trans) {
