--- a/index.html
+++ b/index.html
@@ -180,18 +180,43 @@
             link.click();  
             document.body.removeChild(link);  
         }  
-		
-    </script>  
-	<style>
-		body{
-			background:url(1071256544.jpg) no-repeat center fixed;background-size:contain;
+		function addMenu(val){
+		alert(val);
 		}
- 
-	</style>
+		function exportExcl(){
+		alert("export");
+		}
+		function sale(){
+			alert("sale");
+		}
+    </script>  
+
+	
 </head>  
 <body> 
 	<div class="container">
-		
+		<img data-title="代码生成来源Banner设计欣赏网站" width="566" height="800" src="https://menu90.github.io/sale.github.io/1071256544.jpg"  usemap="#859375" />
+		<map name="859375" id="Map">
+			<area style="outline:none;" target="_blank" shape="rect" coords="181,128,300,200" href="javascript:void(0)" onclick="addMenu(0)"  />
+			<area style="outline:none;" target="_blank" shape="rect" coords="308,128,427,200" href="javascript:void(0)" onclick="addMenu(1)" />
+			<area style="outline:none;" target="_blank" shape="rect" coords="437,128,554,200" href="javascript:void(0)" onclick="addMenu(2)" />
+			
+			<area style="outline:none;" target="_blank" shape="rect" coords="181,220,300,292" href="javascript:void(0)" onclick="addMenu(3)" />
+			<area style="outline:none;" target="_blank" shape="rect" coords="308,220,427,292" href="javascript:void(0)" onclick="addMenu(4)"  />
+			<area style="outline:none;" target="_blank" shape="rect" coords="437,220,554,292" href="javascript:void(0)" onclick="addMenu(5)"  />
+			
+			<area style="outline:none;" target="_blank" shape="rect" coords="181,365,300,442" href="javascript:void(0)" onclick="addMenu(6)" />
+			<area style="outline:none;" target="_blank" shape="rect" coords="308,365,427,442" href="javascript:void(0)" onclick="addMenu(7)"  />
+			<area style="outline:none;" target="_blank" shape="rect" coords="437,365,554,442" href="javascript:void(0)" onclick="addMenu(8)"  />
+			
+			<area style="outline:none;" target="_blank" shape="rect" coords="181,460,300,532" href="javascript:void(0)" onclick="addMenu(9)"  />
+			<area style="outline:none;" target="_blank" shape="rect" coords="308,460,427,532" href="javascript:void(0)" onclick="addMenu(10)"  />
+			<area style="outline:none;" target="_blank" shape="rect" coords="437,460,554,532" href="javascript:void(0)" onclick="addMenu(10)"  />
+			
+			<area style="outline:none;" target="_blank" shape="rect" coords="0,755,60,785" href="javascript:void(0)" onclick="exportExcl()"  />
+			<area style="outline:none;" target="_blank" shape="rect" coords="100,755,160,785" href="javascript:void(0)" onclick="sale()"  />
+	
+		</map>
 	</div>
 </body>  
 </html>
