--- a/a.html
+++ b/a.html
@@ -25,7 +25,7 @@ $(function(){
 		
 		if($.cookie(COOKIE_NAME)){
 			sales = $.cookie(COOKIE_NAME);
-			console.log(salea);
+			console.log(sales);
 			
 		}
 });
