--- a/a.html
+++ b/a.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>jQuery对json快速赋值</title>
     <!--引用jQuery库-->
-    <script type="text/javascript" src="./jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="./jquery-1.8.2.min.js" charset="utf-8"></script>
 	<script src="./jquery.cookie.js"></script>
 <script  type="text/javascript">  
 
@@ -20,7 +20,7 @@
    }  
  });
 var COOKIE_NAME = 'sales';  
-		var sales=[];
+		var sales=[{}];
 $(function(){
 		
 		if($.cookie(COOKIE_NAME)){
@@ -33,6 +33,7 @@ $(function(){
 		  function add(){
 			    sales.push({"name":"项","password":"vv6"}) ;
 				var date = new Date();  
+				console.log(sales);
      			date.setTime(date.getTime() + (3 * 24 * 60 * 60 * 1000)); //三天后的这个时候过期  
 				$.cookie(COOKIE_NAME, sales , { path: '/', expires: date });  
 				alert("ok");
