--- a/a.html
+++ b/a.html
@@ -20,7 +20,11 @@ $(function(){
 });
 		
 		  function add(){
-			    sales.push(jQuery.parseJSON('{"PID":蔡丹 ,"Cnt":111}')) ;
+			var obj = {
+					"PID":'蔡丹',
+					"Cnt":111
+				}
+			    sales.push(obj) ;
 				var date = new Date();  
 				console.log(sales);
      			date.setTime(date.getTime() + (3 * 24 * 60 * 60 * 1000)); //三天后的这个时候过期  
