--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<!--<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>-->
     <script type="text/javascript"> 
 		$(function(){
-			if($.cookie('name_str')){
+			if(!$.cookie('name_str')){
 				
 				$.cookie('name_str', "城管追原味,来一腿鸡腿,食肉兽卤肉,无肉不欢卤肉+鸡腿,清凉一夏奥尔良鸡腿"+
 					",海之味吞拿鱼,鸡蛋,辣条,肉松,火腿");
