--- a/img.html
+++ b/img.html
@@ -31,12 +31,15 @@
 	sale_name = "城管追原味,来一腿鸡腿,食肉兽卤肉,无肉不欢卤肉+鸡腿,清凉一夏奥尔良鸡腿"+
 					",海之味吞拿鱼,鸡蛋,辣条,肉松,火腿";
 	var sale_name_arr = sale_name.split(',');
-	
 	var sale_arr = sale_str.split('|');
 	var data_max = sale_arr.sort(function(a,b){
-		return b-a;
+		return parseInt(b)-parseInt(a);
 	})[0];
 	sale_arr = sale_str.split('|');
+	for(var i=0 ;i<sale_arr.length;i++){
+		sale_arr[i] = parseInt(sale_arr[i]);
+	}
+	
 	var data = [sale_arr];
 	//var data = [[1,2,3,4,5,6,7,8,9]];
 	
