--- a/img.html
+++ b/img.html
@@ -17,7 +17,15 @@
 	<script type="text/javascript" src="./jquery-1.8.2.min.js"></script>
 	<script type="text/javascript" src="./jqplot.js"></script>
 	<script src="./jquery.cookie.js"></script>
+	<style>
+	* { margin: 0; padding: 0; }  
+   
+ html, body { height: 100%; width: 100%; }  
+   
+ canvas { display: block; }  
 
+	</style>
+	
 
 
 </head>
@@ -26,13 +34,14 @@
 	<div id="chart2"></div>
 
 	<script type="text/javascript">
+	$(window).resize(resizeCanvas);  
 	var sale_str = $.cookie('sale_str');
 	var sale_name = $.cookie('name_str');
 	sale_name = "城管追原味,来一腿鸡腿,食肉兽卤肉,无肉不欢卤肉+鸡腿,清凉一夏奥尔良鸡腿"+
 					",海之味吞拿鱼,鸡蛋,辣条,肉松,火腿";
 	var sale_name_arr = sale_name.split(',');
 	var sale_arr = sale_str.split('|');
-	console.log(sale_arr);
+	//console.log(sale_arr);
 	var data_max = sale_arr.sort(function(a,b){
 		return parseInt(b)-parseInt(a);
 	})[0];
@@ -49,6 +58,20 @@
 	var x_label = "产品名称"; //X轴标题
 	var x = sale_name_arr; //定义X轴刻度值
 	j.jqplot.diagram.base("chart2", data, line_title, "煎饼销量统计", x, x_label, y_label, data_max, 2);
+	
+	
+   
+		function resizeCanvas() {  
+   
+        $('#chart2').attr("width", $(window).get(0).innerWidth);  
+   
+        $('#chart2').attr("height", $(window).get(0).innerHeight);  
+   
+        context.fillRect(0, 0, canvas.width(), canvas.height());  
+   
+		};  
+   
+		resizeCanvas();  
 
 </script>
 </body>
