--- a/img.html
+++ b/img.html
@@ -17,61 +17,46 @@
 	<script type="text/javascript" src="./jquery-1.8.2.min.js"></script>
 	<script type="text/javascript" src="./jqplot.js"></script>
 	<script src="./jquery.cookie.js"></script>
-	<style>
-	* { margin: 0; padding: 0; }  
-   
- html, body { height: 100%; width: 100%; }  
-   
- canvas { display: block; }  
-
-	</style>
 	
-
-
 </head>
 <body>
-
-	<div id="chart2"></div>
-
+	<div class="table-responsive">
+	<table class="table table-bordered">
+				  <thead>
+					<tr>
+					  <th>产品名称</th>
+					  <th>销售量</th>
+					  <th>销售金额</th>
+					</tr>
+				  </thead>
+				  <tbody id="salesinfo">
+				
+				  </tbody>
+				</table>
+	</div>
 	<script type="text/javascript">
-	$(window).resize(resizeCanvas);  
+	
 	var sale_str = $.cookie('sale_str');
 	var sale_name = $.cookie('name_str');
 	sale_name = "城管追原味,来一腿鸡腿,食肉兽卤肉,无肉不欢卤肉+鸡腿,清凉一夏奥尔良鸡腿"+
 					",海之味吞拿鱼,鸡蛋,辣条,肉松,火腿";
+	sale_str ="1|3|4|0|0|0|0|0|0|0";
+	var  price ="10|13|13|15|15|16|1|1|3|3";
+	var price_arr = price.split('|');
 	var sale_name_arr = sale_name.split(',');
 	var sale_arr = sale_str.split('|');
-	//console.log(sale_arr);
-	var data_max = sale_arr.sort(function(a,b){
-		return parseInt(b)-parseInt(a);
-	})[0];
-	sale_arr = sale_str.split('|');
+	var str;
 	for(var i=0 ;i<sale_arr.length;i++){
-		sale_arr[i] = parseInt(sale_arr[i]);
+		str +="<tr><td>" +sale_name_arr[i] +"</td>";
+		str +="<td>" +sale_arr[i] +"</td>";
+		str += "<td>" + parseInt(sale_arr[i])*parseInt(price_arr[i])+"</td></tr>";
+		//sale_arr[i] = parseInt(sale_arr[i]);
 	}
-	
-	var data = [sale_arr];
-	//var data = [[1,2,3,4,5,6,7,8,9]];
-	
-	var line_title = ["产品销售走势"]; //曲线名称
-	var y_label = "销售量"; //Y轴标题
-	var x_label = "产品名称"; //X轴标题
-	var x = sale_name_arr; //定义X轴刻度值
-	j.jqplot.diagram.base("chart2", data, line_title, "煎饼销量统计", x, x_label, y_label, data_max, 2);
+//	str +="</tr>";
+	console.log(str);
+	$('#salesinfo').append(str);
 	
 	
-   
-		function resizeCanvas() {  
-   
-        $('#chart2').attr("width", $(window).get(0).innerWidth);  
-   
-        $('#chart2').attr("height", $(window).get(0).innerHeight);  
-   
-        context.fillRect(0, 0, canvas.width(), canvas.height());  
-   
-		};  
-   
-		resizeCanvas();  
 
 </script>
 </body>
