--- a/img.html
+++ b/img.html
@@ -40,7 +40,7 @@
 	var sale_name = $.cookie('name_str');
 	sale_name = "城管追原味,来一腿鸡腿,食肉兽卤肉,无肉不欢卤肉+鸡腿,清凉一夏奥尔良鸡腿"+
 					",海之味吞拿鱼,鸡蛋,辣条,肉松,火腿";
-	sale_str ="1|3|4|0|0|0|0|0|0|0";
+	//sale_str ="1|3|4|0|0|0|0|0|0|0";
 	var  price ="10|13|13|15|15|16|1|1|3|3";
 	var price_arr = price.split('|');
 	var sale_name_arr = sale_name.split(',');
