--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
 			
 			var date = new Date();  
      		date.setTime(date.getTime() + (3 * 24 * 60 * 60 * 1000)); //三天后的这个时候过期  
+			$.cookie('cookieId',null,{expires:-1,path: '/'});
+
 			$.cookie('sale_str', sale_str , { path: '/', expires: date });  
 			trObj.remove();
 			  
