--- a/img.html
+++ b/img.html
@@ -15,7 +15,6 @@
     <!-- Custom Fonts -->
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="./jquery-1.8.2.min.js"></script>
-	<script type="text/javascript" src="./jqplot.js"></script>
 	<script src="./jquery.cookie.js"></script>
 	
 </head>
@@ -37,11 +36,9 @@
 	<script type="text/javascript">
 	
 	var sale_str = $.cookie('sale_str');
-	var sale_name = $.cookie('name_str');
-	sale_name = "城管追原味,来一腿鸡腿,食肉兽卤肉,无肉不欢卤肉+鸡腿,清凉一夏奥尔良鸡腿"+
-					",海之味吞拿鱼,鸡蛋,辣条,肉松,火腿";
-	//sale_str ="1|3|4|0|0|0|0|0|0|0";
-	var  price ="10|13|13|15|15|16|1|1|3|3";
+	sale_name = "城管追原味,来一腿鸡腿,食肉兽卤肉,无肉不欢卤肉+鸡腿,清凉一夏奥尔良鸡排"+
+					",一口酥香蒜蓉刀鱼,海之味吞拿鱼,鳗鱼漫步鳗鱼,土豪挚爱榴莲,鸡蛋,辣条,肉松,火腿";
+	var  price ="10|13|13|15|16|16|18|22|22|1|1|3|3";
 	var price_arr = price.split('|');
 	var sale_name_arr = sale_name.split(',');
 	var sale_arr = sale_str.split('|');
