--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			if(!$.cookie('slae_flag')){
 				
 				$.cookie('slae_flag', "1111");
-				$.cookie('sale_str', '0|0|0|0|0|0|0|0|0|0|0|0');
+				$.cookie('sale_str', '0|0|0|0|0|0|0|0|0|0|0|0|0');
 			}
 			 $("#img1").load(function(){
 				var width = $("#img1").width();//获取当前图片宽度
