--- a/img.html
+++ b/img.html
@@ -55,7 +55,7 @@
 	$('#salesinfo').append(str);
 	
 	function clearCookies(){
-		$.cookie('slae_flag',  , { expires: -1 }); 
+		$.cookie('slae_flag',  '', { expires: -1 }); 
 	}
 	
 
