--- a/img.html
+++ b/img.html
@@ -56,7 +56,7 @@
 	
 	function clearCookies(){
 		$.cookie('slae_flag',  '', { expires: -1 }); 
-		$.cookie('sale_str', ''，{ expires: -1 });
+		$.cookie('sale_str', '',{ expires: -1 });
 		alert("清空成功！");
 		window.location.reload()
 	}
