--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 					var str = '<tr id="li_'+val+'" >'+
 							'<td style="width:80px;">'+name+
 							'</td><td style="width:70px;"><input type="button" class="btn btn-my btn-default"  onclick=addOrSub('+val+',0) value="-"/>'+
-							'<span id="num'+val+'" style="font-size:12px;font-weight:bold;">1</span>'+
+							'&nbsp;&nbsp;<span id="num'+val+'" style="font-size:12px;font-weight:bold;">1</span>'+
 							'<span id="unit'+val+'" style="display:none">'+unit+'</span>'+
-							'<input type="button" class="btn btn-my btn-info" onclick=addOrSub('+val+',1) value="+"/>'+
+							'&nbsp;&nbsp;<input type="button" class="btn btn-my btn-info" onclick=addOrSub('+val+',1) value="+"/>'+
 							'</td></tr>';
 					$("#addli").append(str);
 				}
