--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		function addMenu(val){
 			var name;
 			var unit = 0;
-			alert(val);
+			//alert(val);
 			switch(val){
 				case 0:
 				  name = "城管追原味";
