--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 				var wbili = width / 800;//计算图片比例，750原图宽度
 				var height = $("#img1").height();//获取图片高度
 				var hbili = height / 681;//计算高度比，5336原图高度
-				alert(height);
+			//	alert(height);
 				console.log(wbili + ":" + hbili + ":" + height +":" + width);
 				$("area").each(function (i) {//遍历area标签
 					var coords = $(this).attr('coords');//获取坐标值
