--- a/img.html
+++ b/img.html
@@ -38,8 +38,8 @@
 	
 	var sale_str = $.cookie('sale_str');
 	sale_name = "城管追原味,来一腿鸡腿,食肉兽卤肉,无肉不欢卤肉+鸡腿,清凉一夏奥尔良鸡排"+
-					",一口酥香蒜蓉刀鱼,海之味吞拿鱼,鳗鱼漫步鳗鱼,土豪挚爱榴莲,鸡蛋,辣条,肉松,火腿";
-	var  price ="10|13|13|15|16|16|18|22|22|1|1|3|3";
+					",一口酥香蒜蓉刀鱼,海之味吞拿鱼,鳗鱼漫步鳗鱼,土豪挚爱榴莲,鸡蛋,辣条,海苔,火腿,肉松,培根,鸡柳";
+	var  price ="10|13|13|15|16|16|18|22|22|1|1|2|3|3|3|3";
 	var price_arr = price.split('|');
 	var sale_name_arr = sale_name.split(',');
 	var sale_arr = sale_str.split('|');
